    Ultrasound when listing directories. (Wengier)
  - Applied hack to allow the low DMA channel detection
    in the SB16 DIAGNOSE program to work. (Wengier)
  - The default setting of the clip_paste_speed option
    has been changed from 20 to 30, which will help
    prevent lost keystrokes when pasting from the host
    clipboard for some programs. (Wengier)
  - Added support for the XDG_DATA_HOME environment
    variable for config directory in Linux. (rderooy)
  - Added support for compiling with pcap for Windows
    MinGW builds. (Jookia)
  - Added config option "windowposition" (in [sdl]
    section) to set the window position at startup in
    the positionX,positionY format. (tomba4)
  - Added config option "raw_mouse_input" (in [sdl]
    section; SDL2 builds only) to bypass the operating
    system's mouse acceleration & sensitivity settings.
    Implemented by NicknineTheEagle.
  - Added config option "startquiet" (in [dos] section)
    which when set to true will silence the information
    messages before launching Windows programs to run
    on the Windows host. A toggle menu item "Quiet mode
    (no start messages)" is added to the "Windows host
    applications" menu group in "DOS" menu. (Wengier)
  - Add menu group "Text-mode" under "Video" menu to
    change some text-mode related video settings, such
    as changing the number of rows and columns. A zip
    package named TEXTUTIL.ZIP is added to the Z drive
    that contains various utilities (such as CGA.COM,
    EGA.COM, 132X25.COM, 132X43.COM) to change current
    video setting from the command line. Also added a
    config option "high intensity blinking" which when
    set will display high intensity background colors
    instad of blinking foreground text. (Wengier)
  - Updated MPXPLAY to latest version 1.65. (Wengier)
  - Integrated SVN commits (Allofich)
    - r4384: ICW1 on the PIC clears the Interrupt Mask
    Register. Fixes Antagony and quite a few demos that